2015.03.23

Error checking in binSum.

2015.03.16

multiSampleSeg Optimal and Heuristic C code.

2015.03.11

clusterPeaks C code.

LinDynProg.c renamed to cDPA to be consistent with paper.

2015.03.05

Do not use GSL headers for positive infinity cost; instead use
INFINITY defined in "math.h"

2015.03.03

fista.R interval regression code.

binSum C code sets count to -1 for profiles that are too short for the
number of bins requested.

2015.02.27

binSum C code for quickly computing sums over bins of constant size.

2014.11.10

warning when user requests X peaks but that model is infeasible.